<resources>
    <string name="app_name">DroidStress</string>
    <string name="threads">Threads:\u00A0</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="restart">Restart</string>
    <string name="notif_channel_name">Foreground Service</string>
    <string name="notif_channel_description">Required to continue running stress test when app is closed.</string>
    <string name="notif_fgsvc_title">DroidStress foreground service</string>
    <string name="notif_fgsvc_desc">Stress test is running in background...</string>
    <string name="blank_screen">Show blank screen</string>
    <string name="menu_about">About...</string>
    <string name="version">Version:\u00A0</string>
    <string name="html_placeholder">This is placeholder text</string>
    <string name="duration">Duration(minute):\u00A0</string>
    <string name="emptytoinfinity">Empty to infinity</string>
    <string name="status">Status:\u00A0</string>
    <string name="running">Running</string>
    <string name="stopped">Stopped</string>
    <string name="sremaining">%s remaining</string>
    <string name="viewsource">View source of this app</string>
    <string name="memorystress">Memory stress test (MiB):\u00A0</string>
    <string name="emptydisablemem"> Empty to disable</string>
    <string name="memsizeover">The specified memory size exceeds the memory available on the device (%sMiB)! The memory size was fallen back to %sMiB.</string>
    <string name="memoryfull">Memory is full! It may be better to reduce the value of the "Memory stress test".</string>

    <string name="gpl_html">This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.&lt;br/&gt;&lt;br/&gt; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.&lt;br/&gt;&lt;br/&gt; See the GNU General Public License for more details. For more information, see &amp;lt;&lt;a href="https://www.gnu.org/licenses/"&gt;https://www.gnu.org/licenses/&lt;/a&gt;&amp;gt;</string>
    <string name="copyright_html">Copyright (C) 2026 &lt;a href="https://tlfoxhuman.net"&gt;TlFoxHuman (Translucentfoxhuman, 半狐, 半透明狐人間)&lt;/a&gt;</string>
</resources>